--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
+    "faker": "^5.1.0",
+    "firebase": "^8.0.0",
+    "jquery": "^3.5.1",
+    "md5": "^2.3.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
+    "react-toastify": "^6.0.9",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
